# test

./: Dockerfile  README.md  pyproject.toml
articat_cli/: e2e_test.py  enums.py  exceptions.py  helper.py  main.py  retrying.py  server.py  settings.py  smoke_test.py  urls.json  utils.py
etc/: git-commit-template.md  pre-commit-config.yaml  prospector.yaml  sources.bullseye.list
src/: articat_cli.py  enums.py  exceptions.py  retrying.py  server.py  settings.py
