[tool.poetry]
name = "articat-cli"
version = "0.1.0"
description = ""
authors = ["Lemon Shi <shir@vmware.com>"]
license = "MIT"
include = ["articat_cli"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
tenacity = "^8.0.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pre-commit = "^2.20.0"
prospector = "^1.7.7"
ipdb = "^0.13.9"
ipython = "^8.4.0"
pylint = "^2.14.4"

[tool.poetry.scripts]
articat-cli = "articat_cli.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
